[package]
name = "deflater"
version = "0.1.0"
authors = ["Peter Lenkefi <lenkefi.peti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cacti_zip = { path="../cacti_zip" }

#[profile.release]
#debug = true
